[package]
name = "fontsan"
version = "0.5.2"
authors = ["The Servo Project Developers"]
description = "Sanitiser for untrusted font files"
build = "build.rs"
license = "BSD-3-Clause"
edition = "2015"

[dependencies]
libc = "0.2"
miniz-sys = "0.1.7"

[build-dependencies]
cc = { version = "1.0.89", features = ["parallel"] }
glob = "0.3.1"
