[package]
name = "fontsan"
version = "0.6.0"
authors = ["The Servo Project Developers"]
description = "Sanitiser for untrusted font files"
build = "build.rs"
license = "BSD-3-Clause"
edition = "2015"

[dependencies]
fontsan-woff2 = { version = "0.1", path = "src/deps/woff2"}
libc = "0.2"
libz-rs-sys = {  version = "0.5.1", features = ["export-symbols"], optional = true }
libz-sys = { version = "1.1", default-features = false, features = ["libc" ], optional = true}

[features]
# zlib is often present as a shared library on the system, meaning smaller binary size
# if we use bindings to it.
default = ["libz-sys"]
# Use libz-rs (a rust implementation of libz) instead of bindings to libz-sys.
# libz-rs is a bit faster than even libz-ng.
libz-rs = ["dep:libz-rs-sys"]
libz-sys = ["dep:libz-sys"]

[build-dependencies]
cc = { version = "1.0.89", features = ["parallel"] }
glob = "0.3.1"
